[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.26.1", features = ["fs"] }
rand = "0.8.5"


# [profile.release]
# debug = false
# opt-level = 3
# lto = true
# codegen-units = 1