[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
nix = { version = "0.26.1", features = ["fs"] }
nom = { version = "7.1.1" }
# nom = { path = "./nom" }
ouroboros = "0.15.5"
rand = "0.8.5"
rayon = "1.6.1"
regex = "1.7.0"


[profile.release]
debug = true
# opt-level = 3
# lto = true
# codegen-units = 1
